kustomize/base/netpol/appservice.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-appservice
spec:
  podSelector:
    matchLabels:
      choreo.component: appservice
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: nginx-ingress-controller
    - from:
        - podSelector:
            matchLabels:
              choreo.component: frontend
