kustomize/base/netpol/egress-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-default-deny
spec:
  podSelector: {}
  policyTypes:
    - Egress
