kustomize/base/netpol/frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-frontend
spec:
  podSelector:
    matchLabels:
      choreo.component: frontend
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              choreo.component: obsapi
        - podSelector:
            matchLabels:
              choreo.component: appservice
      ports:
        - protocol: TCP
          port: 5978
