kustomize/base/netpol/ingress-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-default-deny
spec:
  podSelector: {}
  policyTypes:
    - Ingress
