kustomize/base/netpol/negotiator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-negotiator
spec:
  podSelector:
    matchLabels:
      choreo.component: negotiator
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: nginx-ingress-controller
    - from:
        - podSelector:
            matchLabels:
              choreo.component: appservice
  egress: []
