kustomize/base/netpol/obsapi.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-obsapi
spec:
  podSelector:
    matchLabels:
      choreo.component: obsapi
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: nginx-ingress-controller
  egress: []
