kustomize/base/netpol/perfanalyzer-estimator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-perfanalyzer
spec:
  podSelector:
    matchLabels:
      choreo.component: pperfanalyzer-estimator
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              choreo.component: perfanalyzer-estimator
  egress: []
