kustomize/base/netpol/perfanalyzer.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-perfanalyzer
spec:
  podSelector:
    matchLabels:
      choreo.component: perfanalyzer
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              choreo.component: programanalyzer
  egress: []
